...
    var imgArray = ["home.png", "income.png", "expenses.png", "logout.png"]
    var userMsg = ""
    override func viewDidLoad() {
        super.viewDidLoad()
        uiview.backgroundColor = UIColor.uicolorFromHex(0xFF4081, alpha: 0.8)
        self.imagePickerView.delegate = self
        menuArray = ["Home", "Add Income", "Add Expenses", "LogOut"]
        userMsg = UserDefaults.standard.string(forKey: "userName")!
        userLbl.text = "Hi, \(userMsg.capitalized)!"
        userLbl.font = UIFont.preferredFont(forTextStyle: .callout)
        userLbl.font = UIFont.boldSystemFont(ofSize: 20)
        
    }
...
            let newFrontViewController = UINavigationController.init(rootViewController:desController)
            
            revealViewController.pushFrontViewController(newFrontViewController, animated: true)
        }
        if cell.menuLbl.text! == "LogOut" {
            let alert = UIAlertController(title: "LogOut", message: "Are You Sure To LogOut", preferredStyle: UIAlertControllerStyle.alert)
            alert.addAction(UIAlertAction(title: "Confirm", style: .default, handler: { (action: UIAlertAction!) in
                self.dismiss(animated: true, completion: nil)}))
            alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: { (action: UIAlertAction!) in
                self.dismiss(animated: false, completion: nil)
            }))
            self.present(alert, animated: true, completion: nil)
        }
...
