...
    @IBOutlet weak var categoryTxt: TextField!
    @IBOutlet weak var detailsTxt: TextField!
    @IBOutlet weak var dateTxt: TextField!
    let datePicker = UIDatePicker()
    let catPicker = UIPickerView()
    var my_id: Int = Int()
    var incomeSource = ["Salary", "Rent Received", "BankOfIntrest"]
    @IBOutlet weak var menuBtn: UIBarButtonItem!
    //Set delegate of cashtextfield
    let incomeAmount = Income_Delegate()
    override func viewDidLoad() {
        super.viewDidLoad()
        //Delegates Sets
...
